--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Smart_TV/src/Escopo.java
 Smart_TV/src/PalavrasReservadas.java
 Smart_TV/src/JavaDoc.java
 Smart_TV/src/Static.java
+Smart_TV/src/Terminal.java
